chore: updating README.md and project