@@ -1,35 +1,60 @@
-[![progress-banner](https://backend.codecrafters.io/progress/claude-code/94609e18-9b41-4ed8-bf34-553a1f8fa05a)](https://app.codecrafters.io/users/codecrafters-bot?r=2qF)
+# llm-agent
 
-This is a starting point for Java solutions to the
-["Build Your own Claude Code" Challenge](https://codecrafters.io/challenges/claude-code).
+A minimal agentic coding assistant built in Java. It accepts a natural language prompt, calls an LLM via the [OpenRouter](https://openrouter.ai) API, and autonomously executes tool calls in a loop until the task is complete.
 
-Claude Code is an AI coding assistant that uses Large Language Models (LLMs) to
-understand code and perform actions through tool calls. In this challenge,
-you'll build your own Claude Code from scratch by implementing an LLM-powered
-coding assistant.
+## How it works
 
-Along the way you'll learn about HTTP RESTful APIs, OpenAI-compatible tool
-calling, agent loop, and how to integrate multiple tools into an AI assistant.
+The agent runs a loop:
+1. Sends the user prompt (plus conversation history) to the LLM
+2. Receives a response — either a final answer or one or more tool calls
+3. Executes the requested tools and feeds results back into the conversation
+4. Repeats until the LLM returns a final answer (no more tool calls)
 
-**Note**: If you're viewing this repo on GitHub, head over to
-[codecrafters.io](https://codecrafters.io) to try the challenge.
+## Tools
 
-# Passing the first stage
+| Tool | Description |
+|------|-------------|
+| `Read` | Read a file from disk |
+| `Write` | Write content to a file |
+| `Bash` | Execute a shell command |
 
-The entry point for your `claude-code` implementation is in
-`src/main/java/Main.java`. Study and uncomment the relevant code, and submit to
-pass the first stage:
+## Requirements
+
+- Java 25
+- Maven
+- An [OpenRouter](https://openrouter.ai) API key
+
+## Setup
 
 ```sh
-codecrafters submit
+export OPENROUTER_API_KEY=your_key_here
 ```
 
-# Stage 2 & beyond
+Optionally override the base URL (defaults to `https://openrouter.ai/api/v1`):
 
-Note: This section is for stages 2 and beyond.
+```sh
+export OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+```
 
-1. Ensure you have `mvn` installed locally.
-2. Run `./your_program.sh` to run your program, which is implemented in
-   `src/main/java/Main.java`.
-3. Run `codecrafters submit` to submit your solution to CodeCrafters. Test
-   output will be streamed to your terminal.
+## Usage
+
+```sh
+./your_program.sh -p "your prompt here"
+```
+
+Example:
+
+```sh
+./your_program.sh -p "List all Java files in this directory and count the lines in each one"
+```
+
+## Model
+
+Defaults to `anthropic/claude-haiku-4.5` via OpenRouter. Change the model in `Main.java` in the `invokeLLMApi` method.
+
+## Build
+
+```sh
+mvn package -Ddir=/tmp/llm-agent-build
+java --enable-preview --enable-native-access=ALL-UNNAMED -jar /tmp/llm-agent-build/llm-agent.jar -p "your prompt"
+```
